# havok-toolbox

./: .gitattributes  .gitignore  CONTRIBUTING.md  License  README.md  _cli_havok.py  blog_tweet_havok_eeg.md  cli.py  engine.yaml  pyproject.toml  requirements.txt  run_havok_app.bat  test_eeg.py
.github/workflows/: ci.yml
benchmark/: baselines.py  cli.py
dashboard/: advanced.py
data/: chb_sample.csv  chb_sample_synthetic.csv
demo/: UPGRADE_PROGRESS.md  lorenz_forcing.npy  lorenz_risk.npy  lorenz_t.npy  lorenz_validation.csv  lorenz_validation_report.json  lorenz_x.npy
docs/: adr.md  competitive_comparison.md
havolib/: __init__.py  adaptive.py  arena.py  attribution.py  auto_tune.py  automl.py  config.py  data_loader.py  decomposition.py  detection.py  edge_of_chaos.py  embedding.py  estimator.py  federated.py  forcing.py  gpu.py  havok_config.yaml  hybrid.py  logging_config.py  ml_risk_predictor.py  multichannel.py  pipeline.py  polars_loader.py  pre_processing.py  serialize.py  surrogate.py  uncertainty.py  user.py  visualization.py
havolib/benchmark/: __init__.py  cli.py  runner.py
havolib/dashboard/: __init__.py  advanced.py  app.py  engine_dashboard.py  simple.py  v3.py
havolib/data/: chb_sample.csv
havolib/engine/: __init__.py  alert_pipeline.py  brand_svd.py  engine.py  incremental_hankel.py  incremental_havok.py  ring_buffer.py  risk_engine.py
havolib/models/: __init__.py  _utils.py  base.py  havok_wrapper.py  registry.py  sindy_wrapper.py
references/: github_insights.md
references/extracted/: esn_blueprint_from_magrilab.md
tests/: test_auto_tune.py  test_cli.py  test_config.py  test_data_invalid.py  test_data_loader.py  test_detection.py  test_edge_of_chaos.py  test_embedding.py  test_engine.py  test_estimator.py  test_forcing.py  test_gpu.py  test_industrial_suite.py  test_master_full.py  test_ml_risk_predictor.py  test_multi_model.py  test_pipeline.py  test_pre_processing.py  test_properties.py  test_real_edf.py  test_regression.py  test_rigorous_validation.py  test_serialize.py  test_surrogate.py  test_user.py  test_v070_modules.py
