[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "havok-toolbox"
version = "0.7.0"
description = "HAVOK Regime-Shift Detector: extract intermittent forcing signals from univariate time series using delay embedding + SVD (Brunton et al. 2017)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "HAVOK Toolbox"}
]
keywords = ["time-series", "havok", "chaos", "regime-shift", "koopman", "embedding", "forcing", "eeg"]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "plotly>=5.0",
    "streamlit>=1.10",
    "click>=8.0",
    "pyyaml",
    "ruptures",
]

[project.optional-dependencies]
all = ["havok-toolbox[streaming,progress,gpu,eeg,automl,fast,torch]"]
streaming = ["paho-mqtt>=2.0"]
progress = ["tqdm>=4.66"]
gpu = ["cupy-cuda12x>=13.0"]
eeg = ["pyedflib>=0.1", "mne>=1.6"]
automl = ["optuna>=4.0"]
fast = ["polars>=1.0"]
torch = ["torch>=2.0"]
full = ["havok-toolbox[streaming,progress,gpu,eeg,automl,fast,torch]"]
dev = ["pytest", "hypothesis>=6.100"]

[project.scripts]
havok = "_cli_havok:cli"

[tool.setuptools]
py-modules = ["_cli_havok"]
packages = ["havolib", "havolib.engine"]

[tool.setuptools.package-data]
"*" = ["data/*.csv", "data/chbmit/*.edf"]

[project.urls]
Homepage = "https://github.com/jbrandonp/havok-toolbox"
Documentation = "https://github.com/jbrandonp/havok-toolbox#readme"
